WORKING has errors - completing new triats logic